added nav and hero section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio_for_UX_designer</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
+
 <body>
+    <!-- main  -->
+    <div class="main h-screen w-screen ">
+        <!-- nav -->
+        <div class="nav w-full py-3 px-8 flex justify-between items-center">
+            <h2 class="text-2xl font-semibold">Hello</h2>
+            <div class="nav_links hidden md:inline  md:flex md:gap-12 md:items-center md:font-medium">
+                <a class="text-lg" href="#">About</a>
+                <a class="text-lg" href="#">Projects</a>
+                <a class="text-lg" href="#">Contact</a>
+            </div>
+            <i class="text-xl font-semibold ri-menu-3-fill md:hidden"></i>
+        </div>
+        <!--  hero section -->
+        <div class="hero_section bg-[#35363B] py-20 ">
+            <h1 class="text-3xl text-white text-center  md:text-5xl">Shivendra Patel</h1>
+            <h1 class="text-3xl text-white text-center md:text-5xl">UX Developer</h1>
+            <div class="text-white text-center mt-4 text-3xl md:text-4xl md:mt-8">
+                <a class="px-1" href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a class="px-1" href=""><i class="fa-brands fa-github"></i></a>
+                <a class="px-1" href=""><i class="fa-solid fa-envelope"></i></a>
+                <a class="px-1" href=""><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+
+        </div>
     
+        <!--  -->
+
+
+    </div>
 </body>
+
 </html>
