--- a/index.html
+++ b/index.html
@@ -44,8 +44,25 @@
             </div>
 
         </div>
-    
-        <!--  -->
+
+        <!--section2  -->
+        <div class="section2 w-full  bg-[#28292E]  overflow-x-hidden py-8">
+            <h1 class="text-2xl font-semibold text-white text-center py-4">About</h1>
+            <div class="box flex flex-col md:flex-row w-full items-center overflow-x-hidden px-8 md:gap-12">
+                <div class="section2_left w-1/2 md:w-1/3 lg:w-1/4"> 
+                    <img class="w-full rounded-full" src="shivendra.jpeg" alt="">
+                </div>
+                <div class="section2_right w-full  px-10 py-4 text-white overflow-x-hidden md:w-1/2">
+                    <h2 class="text-xl font-semibold my-4">UX Developer</h2>
+                    <p class="text-lg font-base">I am a tech enthusiast deeply passionate about UX design and front-end development. I invest time
+                        every day to enhance my expertise in creating seamless, user-friendly interfaces and ensuring
+                        optimal responsiveness in websites. My focus is on crafting intuitive designs that prioritize
+                        user experience and accessibility, blending technical skill with a keen understanding of user
+                        needs.</p>
+                    <button class="my-4 px-4 py-2 bg-blue-400 rounded-full text-black text-xl font-semibold ">Download Resume</button>
+                </div>
+            </div>
+        </div>
 
 
     </div>
