--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
 <body>
     <!-- main  -->
-    <div class="main h-screen w-screen ">
+    <div class="main h-screen w-screen overflow-x-hidden">
         <!-- nav -->
         <div class="nav w-full py-3 px-8 flex justify-between items-center">
             <h2 class="text-2xl font-semibold">Hello</h2>
             <div class="nav_links hidden md:inline  md:flex md:gap-12 md:items-center md:font-medium">
                 <a class="text-lg" href="#">About</a>
                 <a class="text-lg" href="#">Projects</a>
-                <a class="text-lg" href="#">Contact</a>
+                <a class="text-lg" href="#">Skills</a>
             </div>
             <i class="text-xl font-semibold ri-menu-3-fill md:hidden"></i>
         </div>
         <!--  hero section -->
-        <div class="hero_section bg-[#35363B] py-20 ">
+        <div class="w-full hero_section bg-[#35363B] py-20 ">
             <h1 class="text-3xl text-white text-center  md:text-5xl">Shivendra Patel</h1>
             <h1 class="text-3xl text-white text-center md:text-5xl">UX Developer</h1>
             <div class="text-white text-center mt-4 text-3xl md:text-4xl md:mt-8">
@@ -45,26 +45,93 @@
 
         </div>
 
-        <!--section2  -->
-        <div class="section2 w-full  bg-[#28292E]  overflow-x-hidden py-8">
+        <!-- section2   -->
+        <div class="section2 w-full  bg-[#28292E]   py-8">
             <h1 class="text-2xl font-semibold text-white text-center py-4">About</h1>
-            <div class="box flex flex-col md:flex-row w-full items-center overflow-x-hidden px-8 md:gap-12">
-                <div class="section2_left w-1/2 md:w-1/3 lg:w-1/4"> 
-                    <img class="w-full rounded-full" src="shivendra.jpeg" alt="">
+            <div class="box flex flex-col  w-full items-center  px-8 md:flex-row md:gap-12  md:justify-center">
+                <div class="section2_left w-1/2 md:w-1/3 lg:w-1/4">
+                    <img class="w-full rounded-full" src="images/shivendra.jpeg" alt="">
                 </div>
-                <div class="section2_right w-full  px-10 py-4 text-white overflow-x-hidden md:w-1/2">
+                <div class="section2_right w-full  px-10 py-4 text-white md:w-1/2">
                     <h2 class="text-xl font-semibold my-4">UX Developer</h2>
-                    <p class="text-lg font-base">I am a tech enthusiast deeply passionate about UX design and front-end development. I invest time
+                    <p class="text-lg font-base">I am a tech enthusiast deeply passionate about UX design and front-end
+                        development. I invest time
                         every day to enhance my expertise in creating seamless, user-friendly interfaces and ensuring
                         optimal responsiveness in websites. My focus is on crafting intuitive designs that prioritize
                         user experience and accessibility, blending technical skill with a keen understanding of user
                         needs.</p>
-                    <button class="my-4 px-4 py-2 bg-blue-400 rounded-full text-black text-xl font-semibold ">Download Resume</button>
+                    <button class="my-4 px-4 py-2 bg-blue-400 rounded-full text-black text-xl font-semibold ">Download
+                        Resume</button>
                 </div>
             </div>
         </div>
 
+        <!--section3  -->
+        <div class="section3 w-full p-8 bg-[#030117]">
+            <h1 class="text-2xl font-semibold text-white text-center py-4">Projects</h1>
+            <div
+                class="section3_box w-full flex flex-col md:flex-row items-center justify-between  md:flex-row md:gap-12  md:justify-center ">
+                <div class="box_child w-5/6 bg-[#0D0B20] p-4 my-8 rounded-xl" >
+                    <img class="w-full rounded-xl" src="images/porject1.png" alt="">
+                    <h1 class="text-xl font-semibold my-4 text-white">Saas Project</h1>
+                    <p class="text-lg font-base text-white my-4">SaaS project delivers cloud-based software solutions to
+                        users via a subscription model, enabling access anytime through web or mobile apps. It focuses
+                        on scalability.</p>
+                    <hr>
+                    <div class="my-4"><button class=" px-4 py-1 bg-[#F5A524] rounded-full text-black text-lg md:my-4"><i
+                                class="ri-html5-line"></i> Html5</button> <button
+                            class=" px-4 py-1 bg-[#F5A524] rounded-full text-black text-lg "><i
+                                class="ri-tailwind-css-line"></i> Tailwind</button></div>
+                    <hr>
+                    <div class="flex justify-between items-center my-4">
+                        <button class=" px-4 py-1 bg-[#F5A524] rounded text-black text-lg "><a href="#"><i
+                                    class="fa-brands fa-github"></i></a></button>
+                        <button class=" px-4 py-1 bg-[#F5A524] rounded text-black text-lg "><a
+                                href="#">Demo</a></button>
+                    </div>
+                </div>
+                <div class="box_child w-5/6 bg-[#0D0B20] p-4 my-8 rounded-xl">
+                    <img class="w-full rounded-xl" src="images/project2.png" alt="">
+                    <h1 class="text-xl font-semibold my-4 text-white">NGO Project</h1>
+                    <p class="text-lg font-base text-white my-4">NGO is a nonprofit entity that operates independently
+                        of government, aiming to address social, cultural, or environmental issues. It works through
+                        advocacy, programs, and services to create positive change in communities.</p>
+                    <hr>
+                    <div class="my-4"><button class=" px-4 py-1 bg-[#F5A524] rounded-full text-black text-lg md:my-4"><i
+                                class="ri-html5-line"></i> Html5</button> <button
+                            class=" px-4 py-1 bg-[#F5A524] rounded-full text-black text-lg "><i
+                                class="ri-css3-line"></i> CSS3</button></div>
+                    <hr>
+                    <div class="flex justify-between items-center my-4">
+                        <button class=" px-4 py-1 bg-[#F5A524] rounded text-black text-lg "><a href="#"><i
+                                    class="fa-brands fa-github"></i></a></button>
+                        <button class=" px-4 py-1 bg-[#F5A524] rounded text-black text-lg "><a
+                                href="#">Demo</a></button>
+                    </div>
+                </div>
+                <div class="box_child w-5/6 bg-[#0D0B20] p-4 my-8 rounded-xl">
+                    <img class="w-full rounded-xl" src="images/project3.png" alt="">
+                    <h1 class="text-xl font-semibold my-4 text-white">Mock brand website</h1>
+                    <p class="text-lg font-base text-white my-4">Mock brand website is a prototype or conceptual version
+                        of a brand's online presence designed for demonstration, testing, or development purposes.</p>
+                    <hr>
+                    <div class="my-4"><button class=" px-4 py-1 bg-[#F5A524] rounded-full text-black text-lg md:my-4"><i
+                                class="ri-html5-line"></i> Html5</button> <button
+                            class=" px-4 py-1 bg-[#F5A524] rounded-full text-black text-lg "><i
+                                class="ri-css3-line"></i> CSS3</button></div>
+                    <hr>
+                    <div class="flex justify-between items-center my-4">
+                        <button class=" px-4 py-1 bg-[#F5A524] rounded text-black text-lg "><a href="#"><i
+                                    class="fa-brands fa-github"></i></a></button>
+                        <button class=" px-4 py-1 bg-[#F5A524] rounded text-black text-lg "><a
+                                href="#">Demo</a></button>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
 
+       
     </div>
 </body>
 
