--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h1 class="text-2xl font-semibold text-white text-center py-4">Projects</h1>
             <div
                 class="section3_box w-full flex flex-col md:flex-row items-center justify-between  md:flex-row md:gap-12  md:justify-center ">
-                <div class="box_child w-5/6 bg-[#0D0B20] p-4 my-8 rounded-xl" >
+                <div class="box_child w-5/6 bg-[#0D0B20] p-4 my-8 rounded-xl">
                     <img class="w-full rounded-xl" src="images/porject1.png" alt="">
                     <h1 class="text-xl font-semibold my-4 text-white">Saas Project</h1>
                     <p class="text-lg font-base text-white my-4">SaaS project delivers cloud-based software solutions to
@@ -128,10 +128,35 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
 
-       
+        <!-- section4 -->
+        <div class="section2 w-full  bg-[#28292E]   py-8">
+            <h1 class="text-2xl font-semibold text-white text-center py-4">Skills</h1>
+            <div class="box flex flex-col  w-full items-center  px-8 md:flex-row md:gap-20  md:justify-center">
+                <div class="section2_left w-full md:w-1/2 lg:w-1/3 text-white">
+                    <h1 class="text-xl font-semibold my-4">My creative skills & Area of Interests.</h1>
+                    <p class="text-lg font-base">Hello World! I am a tech enthusiast passionate for front-end development, Investing every day to
+                        gain more knowledge. I am passionate about create user-friendly interfaces and responsive
+                        websites that drive engagement and innovation, right now pursuing Bachelor of Technology focused
+                        in computer science (AIML) from LNCTS, Bhopal. If you want to dive deep and want to look at my
+                        work then you can visit my github.</p>
+                    <button class="my-4 px-4 py-2 bg-blue-400 rounded-full text-black text-lg font-semibold ">My Github</button>
+                </div>
+                <div class="section2_right w-full  px-4 py-4 text-white md:w-1/2">
+                    <p class="text-xl font-base" my-4><i class="ri-subtract-line"></i>Prototyping, wireframing, user flows, mockups</p>
+                    <p class="text-xl font-base" my-4><i class="ri-subtract-line"></i>Visual design and design software</p>
+                    <p class="text-xl font-base" my-4><i class="ri-subtract-line"></i>User research and usability testing</p>
+                    <p class="text-xl font-base" my-4><i class="ri-subtract-line"></i>Information architecture </p>
+                    <p class="text-xl font-base" my-4><i class="ri-subtract-line"></i> Application development</p>
+                    <p class="text-xl font-base" my-4><i class="ri-subtract-line"></i>Front-end development</p>
+                    <p class="text-xl font-base" my-4><i class="ri-subtract-line"></i>Back-end development</p>
+                    <p class="text-xl font-base" my-4><i class="ri-subtract-line"></i>Database management</p>
+                    <p class="text-xl font-base" my-4><i class="ri-subtract-line"></i>Collaboration</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
