--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <i class="text-xl font-semibold ri-menu-3-fill md:hidden"></i>
         </div>
         <!--  hero section -->
-        <div class="w-full hero_section bg-[#35363B] py-20 ">
+        <div class="w-full hero_section bg-[#101A38] py-20 ">
             <h1 class="text-3xl text-white text-center  md:text-5xl">Shivendra Patel</h1>
             <h1 class="text-3xl text-white text-center md:text-5xl">UX Developer</h1>
             <div class="text-white text-center mt-4 text-3xl md:text-4xl md:mt-8">
@@ -46,7 +46,7 @@
         </div>
 
         <!-- section2   -->
-        <div class="section2 w-full  bg-[#28292E]   py-8">
+        <div class="section2 w-full  bg-[#182B48]   py-8">
             <h1 class="text-2xl font-semibold text-white text-center py-4">About</h1>
             <div class="box flex flex-col  w-full items-center  px-8 md:flex-row md:gap-12  md:justify-center">
                 <div class="section2_left w-1/2 md:w-1/3 lg:w-1/4">
@@ -132,7 +132,7 @@
         </div>
 
         <!-- section4 -->
-        <div class="section2 w-full  bg-[#28292E]   py-8">
+        <div class="section2 w-full  bg-[#192E47]   py-8">
             <h1 class="text-2xl font-semibold text-white text-center py-4">Skills</h1>
             <div class="box flex flex-col  w-full items-center  px-8 md:flex-row md:gap-20  md:justify-center">
                 <div class="section2_left w-full md:w-1/2 lg:w-1/3 text-white">
@@ -157,6 +157,17 @@
                 </div>
             </div>
         </div>
+
+        <!-- section5 -->
+         <div class="footer flex justify-between items-center p-8 bg-[#030117]">
+            <h1 class="text-xl font-semibold text-white">2025 @Shivendra</h1>
+            <div class="text-white text-center  text-3xl md:text-4xl ">
+                <a class="px-2 " href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a class="px-2 " href=""><i class="fa-brands fa-github"></i></a>
+                <a class="px-2 " href=""><i class="fa-solid fa-envelope"></i></a>
+                <a class="px-2 " href=""><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+         </div>
     </div>
 </body>
 
